# ResourceDist

./: Cargo.toml  Dockerfile  README.md
data/: config.yaml
src/: config.rs  error.rs  main.rs  webserver.rs
src/api_types/: error.rs
src/handler/: get_file.rs  get_hash.rs  healthy.rs  mod.rs  ready.rs
src/resources/: file.rs  manager.rs  mod.rs
