[package]
name = "res_dist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = { version = "0.10.0"}
actix-web = { version = "4.4.0", default-features = false }
actix-files = { version = "*", default_features = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1.18"
blake3 = "1.4"
thiserror = "1"
figment = { version = "0.10", features = ["yaml", "env"] }
